# Zuma-Deluxe-HD

./: .gitignore  1.bat  2.bat  CMakeLists.txt  LICENSE  README.md  TODO.txt
content/fonts/: arial12bold.txt  cancun10.txt  cancun12.txt  cancun13.txt  cancun8.txt  cancunfloat14.txt  nativealien48.txt  nativealienextended16.txt  nativealienextended18.txt
content/fonts/ttf/: native.txt
content/levels/: levels.xml
content/music/: zuma.mo3
include/: Animation.h  BallChain.h  Bullet.h  Consts.h  Engine.h  Enums.h  FX.h  Frog.h  Game.h  Level.h  MenuMgr.h
old_src/: Application.c  main.c
old_src/gameplay/: Game.c  Game.c.old  Game.h  Level.c  Level.h
old_src/gameplay/objects/: BallChain.h  Bullet.h  FX.h
old_src/global/: Engine.c  Engine.h  HQC.h  UsefulTypes.h
old_src/global/HQC/: HQC.c  HQC_Error.c  HQC_Memory.c
src/: Animation.c  Application.c  Application.h  BallChain.c  Bullet.c  Engine.c  FX.c  Frog.c  Game.c  Level.c  MenuMgr.c  main.c
src/gameplay/: Game.c  Game.h  Level.c  Level.h
src/gameplay/objects/: BallChain.c  BallChain.h  Bullet.c  Bullet.h  FX.c  Frog.h
src/global/: Engine.h  HQC.c  HQC.h  HQC_Key.h  UsefulTypes.h
src/global/HQC/: HQC.c  HQC_Animation.c  HQC_Artist.c  HQC_DJ.c  HQC_Error.c  HQC_File.c  HQC_Memory.c  HQC_Sprite.c  HQC_String.c  HQC_Vector.c  HQC_XML.c
src/global/hqc/: Error.c  Error.h  Typedefs.h  Vector.c  Vector.h
src/menu/: MenuMgr.h
src/zuma/: BallChain.c  BallChain.h  BallColors.h  Bullets.c  Bullets.h  FloatingText.c  FloatingText.h  Frog.c  Frog.h  Game.c  Game.h  Level.c  Level.h  Menu.c  Menu.h  ResourceStore.c  ResourceStore.h  Scene.c  Scene.h  Statistics.c  Statistics.h
src/zuma/components/: ComponentID.h  FrogComponent.h  HudComponent.h  PositionComponent.h
src/zuma/ecs/: Entity.h  System.h  World.c  World.h
src/zuma/entities/: FrogEntity.c  FrogEntity.h
src/zuma/scenes/: Index.h  SceneGame.c  SceneTest.c
src/zuma/systems/: FrogSystem.c  HudSystem.c  SpriteDrawSystem.c  SpriteDrawSystem.h
